src/test/deca/context/invalid/provided/invalide_08_op_arith_bool.deca
// Description : test la multiplication par un boolean
// Sortie : 
// A MODIFIER

{
    boolean bool = true;
    bool = bool * 2.0;
}